src/components/people-section.module.css
.whoContainer {
  flex-direction: row;
  display: flex;
  justify-content: flex-start;
  height: 180px;
  letter-spacing: normal;
  flex-wrap: wrap;
}

.whoPerson {
  display: flex;
  margin-right: 40px;
  margin-bottom: 20px;
}

.contactInfo {
  padding: 0px 10px;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.contactName {
  text-align: center;
  font-weight: normal;
}

.contactInfoText {
  margin: 5px 0px;
}

.headShot {
  width: 120px;
  height: 180px;
  background-size: cover;
  background-position: center;
  filter: saturate(70%);
}

